<resources>
    <string name="app_name">inQuery</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="buttonlogin">Login</string>
    <string name="buttoncreateaccount">Create Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_umail">UCSB Email</string>
    <string name="login_password">Password</string>
    <string name="login_link"><u>Need an account? Create one here.</u></string>

    <string name="createAccount_umail">UCSB Email</string>
    <string name="createAccount_password">Password</string>
    <string name="createAccount_username">Username</string>
    <string name="createAccount_confirmPassword">Confirm Password</string>
    <string name="createAccount_level">Level:</string>
    <string name="createAccount_ugrad">Undergraduate</string>
    <string name="createAccount_grad">Graduate</string>
    <string name="createAccount_proffessor">Professor</string>
    <string name="createAccount_confirm">Confirm</string>

    <string name="editProfile_changePhoto">Change Photo</string>
    <string name="editProfile_deletePhoto">Delete Photo</string>
    <string name="editProfile_save">Save Changes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>

    <!-- TODO: ENTER THE REST OF MAJORS OFFERED AT UCSB -->
    <string-array name="majors_array">
        <item>Anthropology</item>
        <item>Art</item>
        <item>Asian American Studies</item>
        <item>Black Studies</item>
        <item>Chemical Engineering</item>
        <item>Chicano Studies</item>
        <item>Communication</item>
        <item>Computer Engineering</item>
        <item>Computer Science</item>
        <item>Dance</item>
        <item>Earth Science</item>
        <item>Economics</item>
        <item>English</item>
        <item>Environmental Studies</item>
        <item>Film and Media</item>
        <item>Geography</item>
        <item>Mathematics</item>
        <item>Mechanical Engineering</item>
        <item>Physics</item>
        <item>Psychology</item>
        <item>Sociology</item>
        <item>Theater</item>
        <item>Undeclared</item>
        <item>Major</item>
    </string-array>

    <string-array name="levels_array">
        <item>Undergraduate</item>
        <item>Graduate</item>
        <item>Professor</item>
        <item>Level</item>
    </string-array>

    <string-array name="userTags">
        <item>Java</item>
        <item>C++</item>
        <item>Python</item>
        <item>Machine Learning</item>
        <item>Deep Learning</item>
        <item>Neural Networks</item>
        <item>Computer Security</item>
        <item>Computer Vision</item>
        <item>Cryptography</item>
        <item>Networking</item>
        <item>Robotics</item>
        <item>Field Programmable Gate Array</item>
        <item>Algorithms</item>
        <item>Data Structures</item>
        <item>Operating Systems</item>
        <item>Programming Languages</item>
        <item>Human-Computer Interaction</item>
        <item>Android Development</item>
        <item>iOS Development</item>
        <item>Web Development</item>
        <item>Natural Language Processing</item>
        <item>Assembly</item>
        <item>Databases</item>
        <item>Graphics</item>

        <item>Anthropology</item>
        <item>Art</item>
        <item>Asian American Studies</item>
        <item>Black Studies</item>
        <item>Chemical Engineering</item>
        <item>Chicano Studies</item>
        <item>Communication</item>
        <item>Computer Engineering</item>
        <item>Computer Science</item>
        <item>Dance</item>
        <item>Earth Science</item>
        <item>Economics</item>
        <item>English</item>
        <item>Environmental Studies</item>
        <item>Film and Media</item>
        <item>Geography</item>
        <item>Mathematics</item>
        <item>Mechanical Engineering</item>
        <item>Physics</item>
        <item>Psychology</item>
        <item>Sociology</item>
        <item>Theater</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="search_hint">Search for tag...</string>
</resources>
